🔨 fixed the height to not overflow

--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -1,5 +1,5 @@
 .container {
-	height: 100vh; 
+	height: 100%; 
   margin: 0 auto;
 	padding: 0 1rem;
 	display: flex; 
@@ -23,7 +23,6 @@
 	align-items: center; 
 	height: 100px; 
 	width: 100%; 
-
 	Button {
 		margin-left: 1rem; 
 	}
